# LocalJobDashboard

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  app.py
app/pages/: 1_Resumes.py  2_Job_Search.py  3_Match_Rank.py  4_Settings_Logs.py
docs/: ARCHITECTURE.md  DECISIONS.md  SCORING.md
scripts/: eval.py  fetch_jobs.py  ingest_resume.py  match.py  scrape_boards.py
src/: config.py  logging_config.py  models.py
src/agents/: job_scout.py  match_rank.py  resume_ingest.py
src/llm/: __init__.py  client.py  ollama_client.py
src/storage/: sqlite.py  vectordb.py
src/tools/: chunking.py  dedupe.py  parsing.py  scoring.py
src/tools/job_sources/: __init__.py  base.py  dummy.py  greenhouse.py  lever.py  remotive.py  scraper.py
tests/: test_chunking.py  test_dedupe.py  test_match_rank.py  test_parsing.py  test_scoring.py  test_sqlite.py
