[project]
name = "local-job-dashboard"
version = "0.1.0"
description = "Local agentic job dashboard using Streamlit, Chroma, SQLite, and Ollama"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"app/app.py" = ["E402"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
